monopyly/static/css/style.css
/* ... */
@media screen and (max-width: 1500px) {
  .details .summary-container {
    margin: 0 0 50px 0;
  }
}

.details .summary-box {
  display: flex;
  flex-direction: column;
  width: min-content;
  padding: 40px 50px 60px;
  border-radius: 25px;
  box-shadow: 1px 1px 5px #dddddd;
  background-color: #f8f8f8;
}

.details .summary-box .balance {
  display: flex;
  justify-content: space-between;
  min-width: 325px;
  margin: 20px 0;
  font-size: 72pt;
  font-weight: bold;
  letter-spacing: 1px;
  text-align: center;
}

.details .summary-box .title {
  font-size: 28pt;
}

.details .summary-box .suptitle {
  margin-bottom: 10px;
  color: #888888;
  font-size: 14pt;
}

.details .transactions-container {
  width: 50%;
}
@media screen and (max-width: 1500px) {
  .details .transactions-container {
    margin-top: 50px;
  }
}


/*
 * Customization for the 'Home' page
 */
#homepage-block {
  padding: 30px 0 30px 0;
  background-color: #dddddd;
  border: 1px solid #d8d8d8;
  border-radius: 6px;
  box-shadow: 2px 2px 5px #cccccc;
}

#homepage-block h2 {
  margin: 25px 0;
  font-size: 3em;
  letter-spacing: -2px;
  text-align: center;
}

#homepage-block h3 {
  margin: 25px 0;
  color: #777777;
  font-size: 1.7em;
  font-weight: 100;
  letter-spacing: 0.5px;
  text-align: center;
}

#homepage-panels {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

#homepage-panels .panel {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin: 20px;
  padding: 50px;
  background-color: #fafafa;
  border: 1px solid #f5f5f5;
  box-shadow: 2px 2px 5px #cccccc;
}

#homepage-panels div:first-of-type {
  margin-left: 0;
}

#homepage-panels div:last-of-type {
  margin-right: 0;
}

#homepage-panels .panel h2 {
  margin: 0 0 15px;
}

#homepage-panels .panel h3 {
  margin: 20px 0 10px;
  color: #bbbbbb;
  font-size: 12pt;
  letter-spacing: 1px;
  text-transform: uppercase;
}

#homepage-panels .panel ul {
  margin: 0 0 15px;
}

#homepage-panels .panel ul:last-of-type {
  margin: 0;
}

#homepage-panels .panel .category {
  padding: 0;
  list-style-type: none;
}

#homepage-panels .panel .category li {
  margin: 5px 0;
}

#homepage-panels .category h4 {
  width: 50%;
  margin: 10px 0;
  border-bottom: 2px solid #eeeeee;
}

#bank.panel,
#investments.panel {
  justify-content: center;
}

#bank.panel h2,
#investments.panel h2 {
  color: #bbbbbb;
}


/*
 * Customization for the 'About' page
 */
#about {
  width: 75%;
  margin: auto;
  text-align: justify;
}

#about .signature {
  margin-bottom: 100px;
  font-weight: bold;
  font-style: oblique;
  text-align: right;
}


/*
 * Customization for the 'Bank Accounts' page
 */
#bank-container .bank-block {
  margin: 25px 0;
  padding: 30px;
}

#bank-container .bank-block h3 {
  margin-top: 0;
  padding: 0 30px;
  /*text-align: center;*/
}

#bank-container .account-blocks {
  border: 2px solid #dddddd;
}

#bank-container .account-block {
  padding: 25px 30px;
  border-top: 0.5px solid #dddddd;
  border-bottom: 0.5px solid #dddddd;
  background-color: #f5f5f5;
}

#bank-container .account-block:hover {
  filter: brightness(0.98);
}

#bank-container .account-block .account-info {
  display: flex;
  align-items: center;
  color: inherit;
}

#bank-container .account-block .account-info .digits {
  color: #888888;
  margin-right: 10px;
}

#bank-container .account-block .expanded {
  display: none;
  margin-top: 20px;
}

#bank-container .icon-button {
  display: inline-block;
  height: 25px;
  width: 25px;
  margin: 0 15px;
  background-size: 25px;
  filter: brightness(0.8);
}

#bank-container .icon-button:hover {
  filter: none;
}

#bank-account-settings {
  margin: 50px 0 25px;
  padding: 0 25px;
}

#account-type-container {
  width: 30%;
  min-width: 350px;
  border: 2px solid #dddddd;
  background-color: #f5f5f5;
}

#account-type-container h2 {
  margin: 0;
  padding: 10px;
}

#account-type-container .account-types {
  border-top: 2px solid #dddddd;
}

#account-type-container .account-type {
  padding: 10px;
  border-top: 0.5px solid #dddddd;
  border-bottom: 0.5px solid #dddddd;
}


/*
 * Customization for the 'New Bank Account' & 'Update Bank Account' pages
 */
form#bank-account .hidden {
  display: none;
}


/*
 * Customization for the 'Bank Account Summaries" pages
 */
#bank-account-summaries-container {
  display: flex;
  flex-direction: column;
  align-items: center
}

#bank-account-summaries-container .bank {
  margin: 0 0 10px;
  text-align: center;
  text-transform: uppercase;
}

#bank-account-summaries {
  display: flex;
  flex-direction: column;
  width: 100%;
}

#bank-account-summaries .account-type-block {
  display: flex;
  flex-direction: column;
  width: 50%;
  min-width: 400px;
  margin: 10px auto;
  padding: 25px;
}

#bank-account-summaries .account-block {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  box-sizing: border-box;
  margin-bottom: 15px;
  padding: 30px 10%;
}

#bank-account-summaries a.account-block:last-of-type {
  margin-bottom: 0;
}

#bank-account-summaries .account-block .title {
  font-size: 16pt;
}

#bank-account-summaries .account-block .title .digits {
  margin-right: 10px;
}

#bank-account-summaries .account-block .balance {
  font-size: 24pt;
  font-weight: bold;
}


/*
 * Customization for the (bank) 'Account Details' page
 */


/*
 * Customization for the 'New Bank Transaction'/'Update Bank Transaction' pages
 */
form#bank-transaction {
}


/*
 * Customization for the 'Cards' page
 */
#credit-cards-container {
  display: flex;
  flex-wrap: wrap;
  width: 420px;
  margin: auto;
}
@media screen and (min-width: 1060px) {
  #credit-cards-container {
    width: 840px;
  }
}
@media screen and (min-width: 1580px) {
  #credit-cards-container {
    width: 1260px;
  }
}
@media screen and (min-width: 2100px) {
  #credit-cards-container {
    width: 1680px;
  }
}

#credit-cards-container .credit-card-block {
  margin: 10px;
}
/* ... */

